--- a/huaren.html
+++ b/huaren.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-		<title>Bootstrap 101 Template</title>
+		<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+		<title>保健路-宝宝商场</title>
 
 		<!-- Bootstrap -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 				background-: url(640.gif);
 			
 				position: fixed;
-				bottom: 5.5rem;
+				bottom: 7rem;
 				right: 1rem;
 				
 				background-size: left;
@@ -45,6 +45,16 @@
 				line-height: ;
 				display: inline;
 			} 
+			.test{
+				position: fixed;
+				bottom: 40%;
+				right: 33%;
+			}
+			.tishi{
+				width: 20rem;
+				height: 15ren;
+				
+			}
 			#center{
 				  color: #566F89;
 				  background: #C5DFF8;
@@ -57,14 +67,18 @@
 	<body>
 
 		<div id="main">
-			<div id="center">
+			<!-- <div id="center">
 				欢迎光临宝宝商城，位置请导航!
-			</div>
+			</div> -->
 			<iframe src="http://naver.me/5e0BFSrd" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
 
 			<div class="xuanfu">
 				<input type="image" class="shouzhi"  src="640.gif" />
 			</div>
+			<div class="test">
+				<input type="image" class="tishi" src="110.jpg" />
+			</div>
+		
 		</div>
 		
 		<script>
